--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     environment:
       - OLLAMA_NUM_PARALLEL=2
       - OLLAMA_MAX_LOADED_MODELS=1
+      - OLLAMA_DEBUG=1
     volumes:
       - ollama_storage:/root/.ollama
     networks:
